--- a/style.css
+++ b/style.css
@@ -96,4 +96,22 @@ header a:hover {
     text-decoration: underline;
   }
 
+  .interests {
+    display: grid;
+    grid-template-columns: auto auto;
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+  }
+
+  .interests img{
+    width: 300px;
+    height: 220px;
+    margin: 8px;
+    border-radius: 22px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.4); 
+    object-fit: cover;
+  }
+
 
